cambie el titulo del proyecto el nombre del proyecto y el primer parrafo

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
-    <title>Olivia Ros</title>
+    <title>Variquí chocolatería</title>
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.9.0/css/all.min.css"
@@ -62,11 +62,8 @@
     <header id="Hero-Section" class="text-light text-end py-5 mt-5">
       <div class="container">
         <div class="ms-auto col-12 col-md-7">
-          <h1 class="display-1 fw-bold my-5">
-            Comidas del fin <br />
-            del mundo
-          </h1>
-          <p class="my-5">lo siento hoy no tengo creatividad</p>
+          <h1 class="display-1 fw-bold my-5">Variquí chocolatería</h1>
+          <p class="my-5">Chocolatería artesanal</p>
           <div class="mb-5 pb-5">
             <button class="btn btn-lg btn-outline-info text-light me-4">
               Trabajos
