--- a/index.html
+++ b/index.html
@@ -75,12 +75,11 @@
     </header>
 
     <section id="Acerca-de-mi" class="container text-center my-5">
-      <h2 class="display-3 fw-bold my-4">Acerca de mi</h2>
+      <h2 class="display-3 fw-bold my-4">Quienes somos?</h2>
 
       <p class="my-4">
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Odio quisquam
-        distinctio, odit laborum aliquam earum itaque cum sequi, dolorem optio
-        vol
+        somos una chocolateria artesanal con mas de 15 años en el mercado
+        haciendo dulce la vida de nuestros clientes
       </p>
 
       <div class="row">
@@ -88,30 +87,24 @@
           <i class="fas fa-camera fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Fotógrafa de comida</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            disculpen que no escriba más, estoy algo corto de creatividad estos
+            dias....
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="fas fa-bullhorn fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Crítica culinaria</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            disculpen que no escriba más, estoy algo corto de creatividad estos
+            dias....
           </p>
         </div>
         <div class="col-12 col-md-4">
           <i class="far fa-map fa-3x my-3"></i>
           <h3 class="my-3 fw-bold">Bloggera de viajes</h3>
           <p class="my-3">
-            Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do
-            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-            aliquip ex ea commodo consequat.
+            disculpen que no escriba más, estoy algo corto de creatividad estos
+            dias....
           </p>
         </div>
       </div>
@@ -132,10 +125,8 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Asado en la Patagonia</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Explicabo iure sint, perspiciatis distinctio molestias nihil
-                repudiandae neque rem adipisci repellendus libero illo quo
-                blanditiis, velit quasi ad, recusandae voluptates officia.
+                disculpen que no escriba más, estoy algo corto de creatividad
+                estos dias....
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -152,10 +143,8 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Papas del fin del mundo</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Deserunt a culpa doloremque voluptatem dicta nam. Maxime ipsum,
-                consequatur quos error fuga excepturi quo. Laudantium optio
-                pariatur laboriosam modi, ea molestias?
+                disculpen que no escriba más, estoy algo corto de creatividad
+                estos dias....
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -172,10 +161,8 @@
             <div class="card-body">
               <h5 class="card-title fw-bold">Salmones de Alaska</h5>
               <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
-                Obcaecati facere quibusdam sint id laborum magni velit ducimus
-                corporis facilis qui architecto dolor, accusamus eveniet
-                exercitationem fugit. Quod autem neque ducimus.
+                disculpen que no escriba más, estoy algo corto de creatividad
+                estos dias....
               </p>
               <button type="button" class="btn btn-outline-info">
                 Ver más
@@ -190,10 +177,8 @@
       <h2 class="display-4 fw-bold text-center my-4">Contáctame</h2>
 
       <p class="text-center my-4 d-none d-md-block">
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Doloribus
-        sapiente, autem delectus totam expedita animi corporis dolorem qui
-        magnam, aspernatur officiis quasi culpa tempora est commodi. Voluptate
-        beatae tempora quaerat?
+        disculpen que no escriba más, estoy algo corto de creatividad estos
+        dias....
       </p>
 
       <form>
